src/tests/snapshots/ciboulette2postgres__tests__response_elements__convert_multiple_field_with_related.snap
---
source: src/tests/response_elements.rs
expression: value

---
[
  {
    "identifier": {
      "type": "articles",
      "id": "[uuid]"
    },
    "data": {
      "body": "Yes",
      "title": "How to dead"
    },
    "related": null
  },
  {
    "identifier": {
      "type": "articles",
      "id": "[uuid]"
    },
    "data": {
      "body": "Yeah I know ! Right ?!",
      "title": "Oh my g**"
    },
    "related": null
  },
  {
    "identifier": {
      "type": "peoples",
      "id": "[uuid]"
    },
    "data": {
      "age": 22,
      "first-name": "Francis",
      "gender": "M",
      "last-name": "Le Roy",
      "twitter": null
    },
    "related": {
      "type": "peoples",
      "id": "[uuid]"
    }
  },
  {
    "identifier": {
      "type": "peoples",
      "id": "[uuid]"
    },
    "data": {
      "age": 22,
      "first-name": "Francis",
      "gender": "M",
      "last-name": "Le Roy",
      "twitter": null
    },
    "related": {
      "type": "peoples",
      "id": "[uuid]"
    }
  },
  {
    "identifier": {
      "type": "peoples",
      "id": "[uuid]"
    },
    "data": {
      "age": 34,
      "first-name": "Somebody",
      "gender": "F",
      "last-name": "Wuhu",
      "twitter": "@randomhandle"
    },
    "related": {
      "type": "peoples",
      "id": "[uuid]"
    }
  }
]
